fhstyle.css
body {
    padding-right: 0px;
    padding-left: 0px;
    font-size: 100%;
    padding-bottom: 0px;
    margin: 0px;
    color: #000000;
    padding-top: 0px;
    font-family: Verdana, Arial, sans-serif;
    background-color: #ffffff;
}

.fhcontent {
    padding-left: 1em;
    padding-right: 1em;
}

#menubar {
    padding: 0.25em;
    background-color: orange;
    margin-bottom: 1.5em;
    font-weight: bold;
    overflow: hidden;
}

#menubar ul {
    list-style: none;
    padding: 0;
    margin: 0.25em;
    line-height: 2em;
}

#menubar li {
    display: inline;
    margin: 0;
    margin-right: 0.8em;
}

#menubar a {
    color: black;
    text-decoration: none;
}

p {
    font-size: 100%;
    margin-block-start: 0em;
    margin-block-end: 0.5em; 
}

.FhWelcome {
    margin-bottom: 1em;
}

#header {
    height: 136px;
    display: flex;
    align-items: center;
    overflow: hidden;
}

#header img {
    margin-right: 0.5em;
    height: 100%;
}

#header h1 {
    font-size: x-large;
    margin-top: 0;
    margin-bottom: 0;
}

.fhcontent h1 {
    font-size: large;
}

.FhSiteTitle {
    font-size: large;
    font-weight: bold;
    margin-bottom: 1em;
}

.FhSeeAlso {
    margin-bottom: 2em;
}

.fhimgwrap {
    margin-bottom: 2em;
}

.fhimgdimc640 img {
    width: 100%;
    margin: 0;
}

.fhimgcolumn {
    float: right;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.fhimgwrap {
    text-align: center;
    margin-bottom: 1em;
}
.fhimgwrap img {
    border: 1px black solid;
}
.fhimgcolumn {
    float: right;
    margin-left: 10px;
    margin-top: 10px;
    clear: both;
}
.fhimgleft {
    overflow: auto;
    width: 100%;
}
.fhimgleft div {
    float: left;
    padding-right: 1em;
    clear: left;
}
.fhimgright {
    overflow: auto;
    width: 100%;
}
.fhimgright div {
    float: right;
    padding-left: 1em;
    clear: right;
}
.fhimgrow {
    width: 100%;
    vertical-align: middle;
}
.fhimgrow div {
    display: inline-block;
    padding-left: 1em;
    vertical-align: top;
}
.fhimgrow p {
    min-height: 4em;
}
.fhimgcentre div img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.fhimgcentre div {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.fhimgcentre p {
    text-align: center;
}
.fhimgdims {
    height: auto;
    width: 96px;
    min-height: 150px;
}
.fhimgdimm {
    height: auto;
    width: 192px;
    min-height: 200px;
}
.fhimgdiml {
    height: auto;
    width: 288px;
    min-height: 350px;
}

@media screen and (min-width: 480) /* responsive layout - wide */ {
    .fhresponsive ul.table-border li {
        border: thin solid black;
    }
    .fhresponsive ul.fhTable {
        display: grid;
        grid-template-columns: 20% 80%;
        grid-gap: 1px;
        list-style-type: none;
    }
    .fhTable li {
    }
}

a {
    color: grey;
}

.fhstdtable {
    min-width: 15em;
}
.b {
    font-weight: bold;
}
.i {
    font-style: italic;
}
.u {
    text-decoration: underline;
}
.s {
    text-decoration: line-through;
}

